* configure.in (all_diff_excludes, diff_excludes): Remove. 	* configure: Regenerate. 	* Makefile.in (LANG_DIFF_EXCLUDES): Remove. 	* objc/config-lang.in (diff_excludes): Remove.
ada:
	* config-lang.in (diff_excludes): Remove.

ch:
	* config-lang.in (diff_excludes): Remove.

cp:
	* config-lang.in (diff_excludes): Remove.

f:
	* config-lang.in (diff_excludes): Remove.

java:
	* config-lang.in (diff_excludes): Remove.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48189 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2001-12-20  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* configure.in (all_diff_excludes, diff_excludes): Remove.
+	* configure: Regenerate.
+	* Makefile.in (LANG_DIFF_EXCLUDES): Remove.
+	* objc/config-lang.in (diff_excludes): Remove.
+
 2001-12-19  Dan Nicolaescu  <dann@ics.uci.edu>
 
 	* config/sparc/sparc.md (ldd peephole2s): For load peepholes pass
