--- a/gcc/ch/ChangeLog
+++ b/gcc/ch/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-20  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* config-lang.in (diff_excludes): Remove.
+
 2001-12-15  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* expr.c: Use "built-in" spelling in messages.
