--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-20  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* config-lang.in (diff_excludes): Remove.
+
 2001-12-17  Ed Schonberg <schonber@gnat.com>
 
 	* sem_res.adb (Resolve_Selected_Component): do not generate a 
