* po/gcc.pot: Regenerate.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48190 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2001-12-20  Joseph S. Myers  <jsm28@cam.ac.uk>
 
+	* po/gcc.pot: Regenerate.
+
 	* configure.in (all_diff_excludes, diff_excludes): Remove.
 	* configure: Regenerate.
 	* Makefile.in (LANG_DIFF_EXCLUDES): Remove.
