PR c/5147         * gcc.dg/special/ecos.exp:  wkali-1.c unsupported if         target does not support weak symbols.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48191 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-19  David Billinghurst <David.Billinghurst@riotinto.com>
+
+	* gcc.dg/special/ecos.exp:  wkali-1.c unsupported if
+	target does not support weak symbols.
+
 2001-12-19  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/compile/20011219-1.c: New test.
