2001-12-19  Aldy Hernandez  <aldyh@redhat.com>
        * doc/install.texi: Add documentation for --enable-altivec.

        * config.gcc: Add support for --enable-altivec.

        * config/rs6000/altivec.h: New.

        * config/rs6000/linuxaltivec.h (SUBSUBTARGET_OVERRIDE_OPTIONS):
        Define.  Fix typo.

        * config/rs6000/rs6000.c (vrsave_operation): Change unspec to
	unspec_volatile.
        (generate_set_vrsave): Generate the unspec here instead of calling
        an .md pattern.
        (generate_set_vrsave): Use gen_rtvec.
        (rs6000_emit_prologue): Replace call to gen_get_vrsave with
        gen_rtx_SET.

        * config/rs6000/rs6000.md ("*movsi_internal1"): Add constraints
	for setting special registers.
        ("*set_vrsave_internal"): Use unspec_volatile.
        ("set_vrsave"): Remove.
        ("get_vrsave"): Remove.

        * config/rs6000/rs6000.h (REG_CLASS_CONTENTS): Add vrsave to
	SPECIAL_REGS.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48194 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/doc/install.texi
+++ b/gcc/doc/install.texi
@@ -678,6 +678,12 @@ SPARC@.  If configure does not recognize the model name (e.g.@: arm700,
 603e, or ultrasparc) you provide, please check the configure script
 for a complete list of supported models.
 
+@item --enable-altivec
+Specify that the target supports AltiVec vector enhancements.  This
+option will adjust the ABI for AltiVec enhancements, as well as generate
+AltiVec code when appropriate.  This option is only available for
+PowerPC systems.
+
 @item --enable-target-optspace
 Specify that target
 libraries should be optimized for code space instead of code speed.
