* combine.c (distribute_notes): Avoid adding REG_LABEL notes 	to JUMP_INSNs with JUMP_LABEL.
	* gcc.c-torture/execute/20011219-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48198 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-20  Jakub Jelinek  <jakub@redhat.com>
+
+	* combine.c (distribute_notes): Avoid adding REG_LABEL notes
+	to JUMP_INSNs with JUMP_LABEL.
+
 2001-12-19  Aldy Hernandez  <aldyh@redhat.com>
 
         * doc/install.texi: Add documentation for --enable-altivec.
