* simplify-rtx.c (simplifi_binary_operation) [DIV]: If DIV has 	narrower mode than op0, only return the bits in DIV's mode.
	* gcc.c-torture/compile/20011219-2.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48199 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,7 @@
 2001-12-20  Jakub Jelinek  <jakub@redhat.com>
 
+	* gcc.c-torture/compile/20011219-2.c: New test.
+
 	* gcc.c-torture/execute/20011219-1.c: New test.
 
 2001-12-19  David Billinghurst <David.Billinghurst@riotinto.com>
