* tm.texi (ASM_OUTPUT_OPERAND): Change documentation references to 	"recog_operand" to "recog_data.operand". 	* rtl.def: Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48202 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/doc/tm.texi
+++ b/gcc/doc/tm.texi
@@ -6781,9 +6781,9 @@ that includes @samp{%}-sequences to substitute operands, you must take
 care of the substitution yourself.  Just be sure to increment
 @var{ptr} over whatever text should not be output normally.
 
-@findex recog_operand
+@findex recog_data.operand
 If you need to look at the operand values, they can be found as the
-elements of @code{recog_operand}.
+elements of @code{recog_data.operand}.
 
 If the macro definition does nothing, the instruction is output
 in the usual way.
