--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-20  Turly O'Connor  <turly@apple.com>
+
+	* tm.texi (ASM_OUTPUT_OPERAND): Change documentation references to
+	"recog_operand" to "recog_data.operand".
+	* rtl.def: Likewise.
+
 2001-12-20  Jakub Jelinek  <jakub@redhat.com>
 
 	* simplify-rtx.c (simplifi_binary_operation) [DIV]: If DIV has
