For PR java/4766: 	* libjava.compile/PR4766.java: New file.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48209 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-20  Tom Tromey  <tromey@redhat.com>
+
+	For PR java/4766:
+	* libjava.compile/PR4766.java: New file.
+
 2001-12-20  Andrew Haley  <aph@redhat.com>
 
 	* libjava.lang/FileHandleGcTest.out:  New file.
