--- a/new-regalloc-branch/gcc/ChangeLog.RA
+++ b/new-regalloc-branch/gcc/ChangeLog.RA
@@ -1,3 +1,7 @@
+Thu Dec 20 23:57:05 2001  Denis Chertykov  <denisc@overta.ru>
+
+	* ra.c (get_free_reg): Check hardregs for dont_begin_colors.
+
 2001-09-14  Michael Matz  <matzmich@cs.tu-berlin.de>
 
 	reload1.c (reload): don't delete dead throwing insns.
