--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-20  Richard Henderson  <rth@redhat.com>
+
+	* config/alpha/alpha.c (call_operand) [OSF]: Accept pseudos.
+	* config/alpha/alpha.md (call_osf, call_value_osf): Don't force
+	operand into $27.
+
 2001-12-20  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* configure.in (all_headers, all_lib2funcs): Remove.
