--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,12 @@
+2001-12-20  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* gcc.dg/format/builtin-1.c: Test unlocked stdio.
+	* gcc.dg/format/c90-printf-3.c: Likewise.
+	* gcc.dg/format/c99-printf-3.c: Likewise.
+	* gcc.dg/format/ext-1.c: Likewise.
+	* gcc.dg/format/ext-6.c: Likewise.
+	* gcc.dg/format/format.h: Prototype unlocked stdio.
+
 2001-12-20  Richard Henderson  <rth@redhat.com>
 
 	* g++.old-deja/g++.eh/badalloc1.C (arena_size): New.
