--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,10 @@
+2001-12-20  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* gcc.misc-test/arm-isr.exp: New file.  Control running of the
+        arm-isr.c test.
+        * gcc.misc-tests/arm-isr.c: New file.  Test prologue and
+        epilogue generation for ARM ISR routines.
+
 2001-12-20  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* gcc.dg/format/builtin-1.c: Test unlocked stdio.
