--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-21  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* config/arm/arm.md (prefetch): Use 'a' operand code.
+
 2001-12-20  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* aclocal.m4 (gcc_AC_PROG_GNAT): Run prospective ada drivers in
