* combine.c (nonzero_bits): If using reg_nonzero_bits, 	we don't know anything about bits outside of X mode. 	(num_sign_bit_copies): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48239 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-21  Jakub Jelinek  <jakub@redhat.com>
+
+	* combine.c (nonzero_bits): If using reg_nonzero_bits,
+	we don't know anything about bits outside of X mode.
+	(num_sign_bit_copies): Likewise.
+
 2001-12-21  Nick Clifton  <nickc@cambridge.redhat.com>
 
 	* config/arm/arm.md (prefetch): Use 'a' operand code.
