* gcc.c-torture/compile/20011218-1.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48240 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-20  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.c-torture/compile/20011218-1.c: New test.
+
 2001-12-20  Nick Clifton  <nickc@cambridge.redhat.com>
 
 	* gcc.misc-test/arm-isr.exp: New file.  Control running of the
