Revert my patch of 2001-07-23 for the moment. 	Revert bottom up inliner patches, for the moment.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@48243 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ast-optimizer-branch/gcc/ChangeLog
+++ b/ast-optimizer-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-21  Nathan Sidwell  <nathan@codesourcery.com>
+
+	Revert my patch of 2001-07-23 for the moment.
+	
 2001-10-15  Diego Novillo  <dnovillo@redhat.com>
 
 	* tree-dfa.c (create_varref): If the new reference is inside a
