* config/h8300/h8300.h: Fix a comment typo.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48244 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-21  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300.h: Fix a comment typo.
+
 2001-12-21  Jakub Jelinek  <jakub@redhat.com>
 
 	* combine.c (nonzero_bits): If using reg_nonzero_bits,
