--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-21  Richard Henderson  <rth@redhat.com>
+
+	* g++.old-deja/g++.eh/badalloc1.C (malloc): Fix typo.
+
 2001-12-20  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/compile/20011218-1.c: New test.
