--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-21  Richard Henderson  <rth@redhat.com>
+
+	* c-parse.in (SAVE_WARN_FLAGS): Save warn_traditional.
+	(RESTORE_WARN_FLAGS): Restore it.
+	(extension): Zero warn_traditional.
+
 2001-12-21  Kazu Hirata  <kazu@hxi.com>
 
 	* doc/passes.texi: Fix a typo.
