--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-21  Richard Henderson  <rth@redhat.com>
+
+	* class.c (build_class_ref): Mark _Jv_fooClass DECL_EXTERNAL.
+
 2001-12-20  Tom Tromey  <tromey@redhat.com>
 
 	For PR java/4509:
