Fix for PR java/5165: 	* java/lang/natClassLoader.cc (_Jv_PrepareCompiledClass): 	Convert any constant string field to a String; not just final 	fields.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48255 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,10 @@
 2001-12-21  Tom Tromey  <tromey@redhat.com>
 
+	Fix for PR java/5165:
+	* java/lang/natClassLoader.cc (_Jv_PrepareCompiledClass):
+	Convert any constant string field to a String; not just final
+	fields.
+
 	Fix for PR libgcj/2428:
 	* java/lang/natClass.cc: Include RuntimePermission.h.
 	(getClassLoader): Define.
